feat/api-rework: updated documentations
